--- a/portfolio.html
+++ b/portfolio.html
@@ -52,64 +52,63 @@
                 <li class="portfolio-item">
                     <a class="link" href="">
                         <img src="./images/portfolio1.jpg" alt="BankApp Interface" width="360" height="300" />
-                        <h2 class="portfolio-item-ttltw">Banking App Interface Concept</h2>
+                        <h2 class="ttltw">Banking App Interface Concept</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href="">
                         <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" height="300" />
-                        <h2 class="portfolio-item-ttltw">Cashless Payment</h2>
+                        <h2 class="ttltw">Cashless Payment</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio3.jpg" alt="Meditation App" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Meditation App</h2>
+                        <h2 class="ttltw">Meditation App</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio4.jpg" alt="Taxi Service" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Taxi Service</h2>
+                        <h2 class="ttltw">Taxi Service</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Screen Illustrations</h2>
+                        <h2 class="ttltw">Screen Illustrations</h2>
                         <p class="text-pf">Design</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio6.jpg" alt="Online Courses" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Online Courses</h2>
+                        <h2 class="ttltw">Online Courses</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio7.jpg" alt="Instagram" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Instagram Stories Concept</h2>
+                        <h2 class="ttltw">Instagram Stories Concept</h2>
                         <p class="text-pf">Design</p>
-
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio8.jpg" alt="Organic Food" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Organic Food</h2>
+                        <h2 class="ttltw">Organic Food</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio9.jpg" alt="Fresh Coffee" width="360"
                             height="300" />
-                        <h2 class="portfolio-item-ttltw">Fresh Coffee</h2>
+                        <h2 class="ttltw">Fresh Coffee</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
                 </li>
